# grass-c

./: .gitignore  ChangeLog  LICENSE  README.md  bootstrap  configure.in
doc/doxygen/: Doxyfile
src/: Makefile.am  Makefile.in  grass.h  grass_fwd.h  grass_instruction.c  grass_instruction.h  grass_machine.c  grass_machine.h  grass_parser.c  grass_parser.h  grass_value.c  grass_value.h  main.c  static_assert.h
