#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.60])
AC_INIT([grass], [0.1.0], [yoh2@d2.dion.ne.jp])
AM_INIT_AUTOMAKE
AC_CONFIG_SRCDIR([src/grass_parser.c])

# Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL

# Checks for libraries.
AC_CHECK_LIB(gc, GC_malloc, [], [AC_MSG_ERROR(Test for gc failed.)])

# Checks for header files.
AC_CHECK_HEADERS([locale.h stddef.h string.h unistd.h wchar.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_TYPE_SIZE_T

# Checks for library functions.
AC_FUNC_MBRTOWC
AC_CHECK_FUNCS([memset setlocale strerror])

AC_CONFIG_FILES([Makefile src/Makefile])

AC_OUTPUT
